--- a/db/migrations/environments/development.properties
+++ b/db/migrations/environments/development.properties
@@ -6,7 +6,7 @@ time_zone=GMT+0:00
 
 ## JDBC connection properties.
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/simplespring
+url=jdbc:postgresql://localhost:5432/searchhbo
 username=postgres
 password=postgres
 
