--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:postgresql://localhost:5432/simplespring
+jdbc.url=jdbc:postgresql://localhost:5432/searchhbo
 jdbc.username=postgres
 jdbc.password=postgres
