--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,10 @@ task migrateDB(type: Exec) {
     commandLine './mybatis/bin/migrate', 'up'
 }
 
+task loadTestData(type: Exec){
+    commandLine 'psql' , 'searchhbo', '-f', "${project.rootDir.absolutePath}/src/test/data/testData.sql"
+}
+
 task copyToLib << {
     copy {
         from configurations.runtimeOnly.copy().setTransitive(false)
