added logging for tests to show which test was executed and their result

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,12 @@ task migrateDB(type: Exec) {
     commandLine './mybatis/bin/migrate', 'up'
 }
 
+test {
+    afterTest { desc, result ->
+        println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
+    }
+}
+
 task loadTestData(type: Exec){
     commandLine 'psql' , 'searchhbo', '-f', "${project.rootDir.absolutePath}/src/test/data/testData.sql"
 }
