--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ configurations {
     runtimeOnly
 }
 
-mainClassName = "HelloController"
+mainClassName = "MovieController"
 applicationName = "app"
 
 dependencies {
